# finman

./: README.md  budget_data.json  pyproject.toml
src/finman/: main.py
src/finman/logic/: financial_data.py
src/finman/ui/: budget.py  budget_editor.py  help.py  main_menu.py  overview.py  scene.py  transaction_editor.py  transactions.py
src/finman/util/: dialog.py  menus.py
