[project]
name = "finman"
version = "0.1.0"
description = ""
authors = [
    {name = "Cruz Caine",email = "cruz@cruzcaine.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "finman", from = "src"}]

[project.scripts]
finman = "finman.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
